--- a/css/estilos.css
+++ b/css/estilos.css
@@ -102,3 +102,33 @@ textarea {
 .buttons {
   margin-top: 15px;
 }
+
+a{
+  display: flex;
+}
+
+/* web */
+#noticia-container {
+  width: 100vw;
+  height: 100vh;
+  background-color: #00ff4c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  top: 0;
+  left: 0;
+}
+
+h1 {
+  font-size: 60px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+#contenido {
+  /* display: flex;
+  justify-content: center; */
+  font-size: 30px;
+}
