--- a/css/estilos.css
+++ b/css/estilos.css
@@ -132,3 +132,12 @@ h1 {
   justify-content: center; */
   font-size: 30px;
 }
+
+#infoDiv {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  
+  padding: 10px;
+  border: 1px solid #ccc;
+}
